<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SuperAwesomeMessenger</string>
    <string name="app_name_short">SAM</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="today">today</string>
    <string name="navigation_drawer_open">Navigation Open</string>
    <string name="navigation_drawer_close">Navigation Close</string>
    <string name="menu">Contacts</string>
    <string name="state">State</string>
    <string name="a_quit">QUIT</string>
    <string name="title_activity_activity_launch">ActivityLaunch</string>
    <string name="title_activity_activity_main">ActivityMain</string>
    <string name="title_activity_activity_login">ActivityLogin</string>
    <string name="title_activity_activity_registration">ActivityRegistration</string>
    <string name="title_activity_activity_home">ActivityHome</string>
    <string name="error">Error occured!</string>
    <string name="error_network">No Network</string>
    <string name="a_login_lbl_welcome">Welcome to SAM!</string>
    <string name="a_login_txt_email">Email</string>
    <string name="a_login_txt_password">Password</string>
    <string name="a_login_btn_login">Login</string>
    <string name="a_login_btn_register">Register</string>
    <string name="a_registration_lbl_registration">Register new user</string>
    <string name="a_registration_txt_email">Email</string>
    <string name="a_registration_txt_password">Password</string>
    <string name="a_registration_txt_reenter_password">Re-enter Password</string>
    <string name="a_registration_btn_register">Register</string>
    <string name="a_registration_error_missing_id">Please enter an email address in the ID field!</string>
    <string name="a_registration_error_missing_password">Please enter a password!</string>
    <string name="a_registration_error_passwords_mismatch">The entered passwords do not match!</string>
    <string name="a_registration_error_invalid_id">The entered id is not a valid email address!</string>
    <string name="a_registration_success">Registration Successful!</string>
    <string name="a_registration_error_registration">Registration failed!</string>
    <string name="a_login_error_login">Login failed</string>
    <string name="a_login_error_login_email">Please enter an email address in the ID field!</string>
    <string name="a_login_error_login_password">Please enter a password!</string>
    <string name="a_login_success_login">Logged in</string>
    <string name="a_add_contact_user_already_exists">User already in Contacts!</string>
    <string name="a_add_contact_error">User not found!</string>
    <string name="a_add_contact_error_email">Please enter an email address!</string>
    <string name="a_sendmessage_error">Message sent failed!</string>
    <string name="title_activity_activity_send_test_message">ActivitySendTestMessage</string>
    <string name="a_sendtestmessage_txt_id">ID...</string>
    <string name="a_sendtestmessage_txt_message_hint">Message...</string>
    <string name="a_sendtestmessage_btn_send">Send</string>
    <string name="a_main_quit_app_title">QUIT SAM?</string>
    <string name="a_main_quit_app_desc">Do you want to quit the app?</string>
    <string name="a_add_contact_txt_mail">enter e-mail</string>
    <string name="f_navigation_drawer_btn_add_contact">Add Contact</string>
    <string name="title_activity_activity_msg">MSG</string>
    <string name="a_msg_hint">Message</string>
    <string name="a_msg_me">Me</string>

</resources>
