<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivitySendTestMessage" >

    <EditText
        android:id="@+id/a_sendtestmessage_txt_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/a_sendtestmessage_txt_id"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/a_sendtestmessage_txt_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/a_sendtestmessage_txt_message_hint"
        android:inputType="textMultiLine"
        android:maxLines="8"
        android:minLines="8" />

    <Button
        android:id="@+id/a_sendtestmessage_btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_sendtestmessage_btn_send" />

</LinearLayout>
